[gd_scene load_steps=10 format=3 uid="uid://dd36j1c11e0cl"]

[ext_resource type="FontFile" uid="uid://wie83cyejdxi" path="res://Assets/fuentes/Starborn.otf" id="1_j5xyt"]
[ext_resource type="Script" uid="uid://82t6vhyfemed" path="res://barra_vida_2/scripts/barra.gd" id="1_m6bkb"]
[ext_resource type="Texture2D" uid="uid://dhpj6gyt6l36v" path="res://barra_vida/assets/kirby.png" id="2_m6bkb"]
[ext_resource type="Texture2D" uid="uid://cuypq4mps5fg4" path="res://barra_vida/assets/Health bar0_[empty].png" id="3_ee776"]
[ext_resource type="Texture2D" uid="uid://dgskmwdnyhgms" path="res://barra_vida/assets/Health bar15_[full].png" id="4_am6h1"]
[ext_resource type="Script" uid="uid://cdpbpbmg5vnn3" path="res://barra_vida/scripts/vida.gd" id="5_ci6ek"]
[ext_resource type="Texture2D" uid="uid://bchlu3b5q4y6a" path="res://barra_vida/assets/barraneon.png" id="6_66ba6"]
[ext_resource type="Script" uid="uid://cijrp8pfidsi6" path="res://barra_vida/scripts/poder.gd" id="7_58rmt"]

[sub_resource type="LabelSettings" id="LabelSettings_t5vmd"]
font = ExtResource("1_j5xyt")
font_size = 20
font_color = Color(0.0383972, 0.0383972, 0.0383972, 1)
shadow_size = 10
shadow_color = Color(0.976471, 0.980392, 0.980392, 0.917647)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 91.0
offset_top = 92.0
offset_right = 476.968
offset_bottom = 92.0
script = ExtResource("1_m6bkb")

[node name="BarraJugador1" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = -73.0
offset_right = 442.0
offset_bottom = 76.0
theme_override_constants/separation = -25

[node name="Nombre" type="Label" parent="BarraJugador1"]
layout_mode = 2
text = "KIRBY"
label_settings = SubResource("LabelSettings_t5vmd")
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BarraJugador1"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BarraJugador1/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -26

[node name="Icono" type="TextureRect" parent="BarraJugador1/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m6bkb")
expand_mode = 3

[node name="BarraVida" type="TextureProgressBar" parent="BarraJugador1/HBoxContainer/HBoxContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("3_ee776")
texture_progress = ExtResource("4_am6h1")
tint_under = Color(0.956863, 1, 1, 0.988235)
tint_progress = Color(0.0716866, 0.48858, 1, 1)
script = ExtResource("5_ci6ek")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida"]
layout_mode = 2
offset_left = 41.0
offset_top = 126.0
offset_right = 779.0
offset_bottom = 326.0
scale = Vector2(0.497989, -0.154028)
texture_under = ExtResource("6_66ba6")
texture_progress = ExtResource("6_66ba6")
tint_under = Color(0.321728, 0.321728, 0.321728, 1)
script = ExtResource("7_58rmt")

[node name="Timer" type="Timer" parent="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2"]
wait_time = 1.512
autostart = true

[node name="BarraJugador2" type="VBoxContainer" parent="."]
offset_left = 519.0
offset_top = -75.0
offset_right = 1042.0
offset_bottom = 74.0
theme_override_constants/separation = -25

[node name="Nombre" type="Label" parent="BarraJugador2"]
layout_mode = 2
text = "KIRBY"
label_settings = SubResource("LabelSettings_t5vmd")

[node name="HBoxContainer" type="HBoxContainer" parent="BarraJugador2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BarraJugador2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -26

[node name="BarraVida" type="TextureProgressBar" parent="BarraJugador2/HBoxContainer/HBoxContainer"]
layout_mode = 2
value = 100.0
fill_mode = 1
texture_under = ExtResource("3_ee776")
texture_progress = ExtResource("4_am6h1")
tint_under = Color(0.956863, 1, 1, 0.988235)
tint_progress = Color(0.673519, 0.0417178, 0, 1)
script = ExtResource("5_ci6ek")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida"]
layout_mode = 2
offset_left = 41.0
offset_top = 126.0
offset_right = 779.0
offset_bottom = 326.0
scale = Vector2(0.497989, -0.154028)
texture_under = ExtResource("6_66ba6")
texture_progress = ExtResource("6_66ba6")
tint_under = Color(0.321728, 0.321728, 0.321728, 1)
script = ExtResource("7_58rmt")

[node name="Timer" type="Timer" parent="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2"]
wait_time = 1.512
autostart = true

[node name="Icono" type="TextureRect" parent="BarraJugador2/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m6bkb")
expand_mode = 3

[connection signal="timeout" from="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2/Timer" to="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida" method="_on_Timer_timeout"]
[connection signal="timeout" from="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2/Timer" to="BarraJugador1/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2" method="_on_Timer_timeout"]
[connection signal="timeout" from="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2/Timer" to="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida" method="_on_Timer_timeout"]
[connection signal="timeout" from="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2/Timer" to="BarraJugador2/HBoxContainer/HBoxContainer/BarraVida/TextureProgressBar2" method="_on_Timer_timeout"]
